[package]
name = "lovers"
version = "0.1.0"
edition = "2024"

[features]
default = ["high_precision"]
high_precision = ["rug"]

[dependencies]
anyhow = "1.0.98"
approx = "0.5.1"
num-complex = "0.4.6"
rug = { version = "1.27.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
